<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/LinrLayoutImg_margin_top"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn1"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/tileempty" />

        <ImageButton
            android:id="@+id/btn2"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/tileempty" />

        <ImageButton
            android:id="@+id/btn3"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/tileempty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn4"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/tileempty" />

        <ImageButton
            android:id="@+id/btn5"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/tileempty" />

        <ImageButton
            android:id="@+id/btn6"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/tileempty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn7"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:contentDescription="@string/r3c1"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/tileempty" />

        <ImageButton
            android:id="@+id/btn8"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:contentDescription="@string/r3c2"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/tileempty" />

        <ImageButton
            android:id="@+id/btn9"
            android:layout_width="@dimen/ImgBtn_layout"
            android:layout_height="@dimen/ImgBtn_layout"
            android:contentDescription="@string/r3c3"
            android:padding="@dimen/ImgBtn_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/tileempty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/LinrLayoutRst_marginTop"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resetbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/RstBtn_marginLtRt"
            android:layout_marginRight="@dimen/RstBtn_marginLtRt"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:text="@string/reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/msgtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/msgText_marginTop"
            android:fontFamily="monospace"
            android:text="@string/playerXTurn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>
